--- a/gellmvc/scss/include/body.css
+++ b/gellmvc/scss/include/body.css
@@ -45,7 +45,8 @@ body.modal-open, .modal-open .navbar-fixed-top, .modal-open .navbar-fixed-bottom
 input,
 select,
 textarea {
-    max-width: 280px;
+  /* Disabled because it was separating our nice components on the store page.*/
+  /*max-width: 280px;*/
 }
 
 .go-next-btn {
